Add app icons, react native exception handler

--- a/Mobile/SaladApp/android/app/build.gradle
+++ b/Mobile/SaladApp/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-exception-handler')
     compile project(':react-native-google-signin')
     compile project(':react-native-firebase')
     compile fileTree(dir: "libs", include: ["*.jar"])
