--- a/Mobile/SaladApp/android/settings.gradle
+++ b/Mobile/SaladApp/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'SaladApp'
+include ':react-native-exception-handler'
+project(':react-native-exception-handler').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-exception-handler/android')
 include ':react-native-google-signin'
 project(':react-native-google-signin').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-google-signin/android')
 include ':react-native-firebase'
